package com.example.securevault.data.crypto

import java.security.SecureRandom
import javax.crypto.SecretKey
import javax.crypto.SecretKeyFactory
import javax.crypto.spec.PBEKeySpec
import javax.crypto.spec.SecretKeySpec

object PasswordKeyManager {
    fun generateSalt(): ByteArray{
        return ByteArray(16).apply {
            SecureRandom().nextBytes(this)
        }
    }

    fun deriveKey(password: String, salt: ByteArray): SecretKey{
        val factory = SecretKeyFactory.getInstance("PBKDF2WithHmacSHA256")
        val spec = PBEKeySpec(password.toCharArray(),salt,100_000, 256)
        val keyBytes = factory.generateSecret(spec).encoded
        return SecretKeySpec(keyBytes,"AES")
    }

}