package com.example.securevault.domain.model

data class Password(
    val name:String,
    val url:String,
    val username: String,
    val value:String,
)