package com.example.securevault.ui.viewmodel

import androidx.lifecycle.ViewModel

class HomeViewModel : ViewModel() {
}